# melodically

./: .gitignore  README.md  setup.cfg
abstract_melody_parser/: __init__.py  chords.py  harmonic_state.py  harmony.py  melody.py  melody_parser.py  midi_note_queue.py  parsers.py  rhythm.py  rhythmic_parser.py
melodically/: __init__.py  chords.py  harmonic_state.py  harmony.py  midi_note_queue.py  parsers.py  rhythm.py
parser/: parser.py
src/abstract_melody_parser/: __init__.py  melody.py  midi_note_queue.py  rhythm.py
src/tests/: mocks.py
tests/: abstract_melody_parser_test.py  mocks.py  parser_test.py  test_abstract_melody_parser.py  test_melodically.py
