[metadata]
# replace with your username:
name = abstract_melody_parser
version = 0.0.1
author = Federico Di Marzo
author_email = mail.federicodimarzo@gmail.com
description = A python package offering various tools to interpret and parse midi notes.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://https://github.com/FedericoDiMarzo/AbstractMelodyParser
project_urls =
    Bug Tracker = https://github.com/FedericoDiMarzo/AbstractMelodyParser/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.6

[options.packages.find]
where = .