[metadata]
# replace with your username:
name = melodically
version = 0.0.12
author = Federico Di Marzo
author_email = mail.federicodimarzo@gmail.com
description = A python module that contains various tools to handle melodic representation and parsing.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/FedericoDiMarzo/melodically
project_urls =
    Bug Tracker = https://github.com/FedericoDiMarzo/melodically/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.6

[options.packages.find]
where = .